# fmtlib-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md
crates/fmtlib/: Cargo.toml
crates/fmtlib-proc-macros/: Cargo.toml
crates/fmtlib-proc-macros-tests/: Cargo.toml
crates/fmtlib-proc-macros-tests/tests/: 01-parse-positional.rs  02-parse-named.rs  03-parse-mixed.rs  04-parse-empty.rs  tests.rs
crates/fmtlib-proc-macros/src/: lib.rs
crates/fmtlib-rs/: Cargo.toml  build.rs
crates/fmtlib-rs/examples/: tour.rs
crates/fmtlib-rs/include/: shim.h
crates/fmtlib-rs/src/: ffi.rs
crates/fmtlib-rs/src/fmt/: arg.rs  errors.rs  macros.rs  mod.rs  value.rs
crates/fmtlib/examples/: tour.rs
crates/fmtlib/include/: shim.h
crates/fmtlib/src/: ffi.rs  lib.rs
crates/fmtlib/src/fmt/: arg.rs  macros.rs  mod.rs
