[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
rust-version = "1.71"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
cxx = "1.0"
cxx-build = "1.0"
fmtlib-proc-macros = { path = "crates/fmtlib-proc-macros", version = "0.1.0" }
fmtlib = { path = "crates/fmtlib", version = "0.1.0" }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", default-features = false }
thiserror = "1"
trybuild = { version = "1", default-features = false }
