[package]
name = "fmtlib-proc-macros-tests"
version = "0.1.0"
authors = ["Caleb Kiage <caleb.kiage@gmail.com>"]

description = "Tests for the fmtlib proc macros crate"

edition.workspace = true
rust-version.workspace = true
publish = false

[[test]]
name = "tests"
path = "tests/tests.rs"

[dev-dependencies]
fmtlib-proc-macros = { workspace = true }
fmtlib-rs = { workspace = true }
trybuild = { version = "1.0", features = ["diff"] }